Add pipelines and logging
